# example-rest

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: dco.yml  dco_check.sh  push.yml
example_rest/: __main__.py
